# mousipy

./: .gitignore  MANIFEST.in  README.md  setup.cfg
.github/workflows/: python-package.yml
mousipy/: __init__.py  mousipy.py
notebooks/: mousipy.ipynb  mousipy_dev.ipynb  mousipy_pip.ipynb  mousipy_raw.ipynb
src/mousipy/: __init__.py  mousipy.py
src/mousipy/biomart/: human_to_mouse.csv  mouse_to_human.csv
src/tests/: main_test.py
