[metadata]
name = mousipy
version = 0.0.5
author = Stefan Peidli
author_email = stefanpeidli@gmail.com
description = Python package for humanizing mouse gene symbols using orthologs from biomart.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/stefanpeidli/mousipy
project_urls =
    Bug Tracker = https://github.com/stefanpeidli/mousipy/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Natural Language :: English
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6.6
install_requires =
    pandas>=1.1.3
    scanpy>=1.7.2
    tqdm>=4.62.3
    numpy
    scipy
include_package_data = True

[options.packages.find]
where = src
