[metadata]
name = mousipy
version = 0.1.6
author = Stefan Peidli
author_email = stefanpeidli@gmail.com
description = Python package for translating between single-cell count data with mouse and human genes using orthologs from biomart and HCOP.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/stefanpeidli/mousipy
project_urls =
    Bug Tracker = https://github.com/stefanpeidli/mousipy/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Natural Language :: English
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6.6
install_requires =
    pandas>=1.1.3
    anndata>=0.7
    tqdm>=4.62.3
    numpy
    scipy>=1.11.0
include_package_data = True

[options.packages.find]
where = src
